--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <version>8.2.0</version> <!-- MySQL 8.x 驱动，兼容 MySQL 5.7+ -->
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.21.0</version> <!-- 最新版本可到 Maven 仓库查询 -->
+        </dependency>
     </dependencies>
 
     <build>
